# cpu-cache-test

./: 5800u.html  5800u.json  Cargo.toml  README.md  chart.json  m1.html
src/: main.rs
